# copilot-evals

./: README.md  pyproject.toml
.github/: copilot-instructions.md
docker/: Dockerfile
docs/: architecture.md  configuration.md
eval/: cli.py  config.py  report.py  runner.py  trace.py
examples/azure-skills/: README.md  eval-config.yaml
examples/azure-skills/fixtures/app-deploy/: index.js  package.json
examples/azure-skills/infra/: main.bicep  main.bicepparam.example
examples/azure-skills/patterns/: app-deploy.yaml  compliance.yaml  cost-optimization.yaml  diagnostics.yaml  kql-query.yaml
examples/azure-skills/scripts/: azure-auth.sh  azure-login.sh  build-azure-skills.sh  build-baseline.sh  check-environment.sh  inject-error.sh  prepare-diagnostics.sh  reset-environment.sh  restore-app.sh  verify-app-deploy.sh  verify-compliance-audit.sh  verify-diagnostics.sh  verify-resource-explorer.sh
examples/prompt-language/: README.md  eval-config.yaml
